--- a/public/style.css
+++ b/public/style.css
@@ -9,8 +9,33 @@ body {
 }
 
 main {
+    display: flex;
     background-color: #F5F5F5;
     height: 400px;
     max-width: 800px;
     border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.die{
+    background-color: white;
+    height: 50px;
+    width: 50px;
+    color: black;
+    box-shadow: 0px 4px 4px rgba(11, 36, 52,.25);
+    border-radius: 10px; 
+    text-align: center;
+    padding: 12.5px;
+    font-weight: bolder;
+    font-size: larger;
+}
+
+.die-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    
 }
