--- a/public/style.css
+++ b/public/style.css
@@ -10,13 +10,13 @@ body {
 
 main {
     display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
     background-color: #F5F5F5;
     height: 400px;
     max-width: 800px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    border-radius: 5px
 }
 
 .die{
@@ -37,5 +37,25 @@ main {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
-    
+    margin-bottom: 1em;
+}
+
+.roll-button{
+    padding: 1em 2em 1em 2em;
+    color: white;
+    background-color: #5035FF;
+    font-size: larger;
+    font-weight: bold;
+    border-radius: .5em;
+    border: none;
+    cursor: pointer;
+    border: 3px solid #5035FF;
+}
+
+.roll-button:hover {
+    border: 3px solid black;
+}
+
+.roll-button:active {
+    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
